--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fauzan | Web Developer</title>
+    <title>M. Fauzan Fikri</title>
   </head>
   <body>
-    <div id="root" class="font-poppins"></div>
+    <div id="root" class="font-poppins text-dark"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
