--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>M. Fauzan Fikri</title>
   </head>
-  <body class="overflow-x-hidden">
+  <body>
     <div id="root" class="font-poppins text-dark"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
