--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <title>M. Fauzan Fikri</title>
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <div id="root" class="font-poppins text-dark"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
